unpackaged/main/default/objects/Product2/fields/AcctSeed__Accounting_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Accounting_Type__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Taxable Product</fullName>
            </value>
            <value>
                <fullName>Tax Exempt Product</fullName>
            </value>
            <value>
                <fullName>Tax Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>