unpackaged/main/default/objects/Product2/fields/AcctSeed__Inventory_Product__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Inventory_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether the product is a managed inventory product</description>
    <inlineHelpText>Denotes whether the product is a managed inventory product</inlineHelpText>
    <label>Inventory Product</label>
    <type>Checkbox</type>
</CustomField>