unpackaged/main/default/objects/Product2/fields/AcctSeed__Non_Inventoried_Item__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Non_Inventoried_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is no longer used</description>
    <inlineHelpText>This field is no longer used</inlineHelpText>
    <label>zDep-Non-Inventoried Item</label>
    <type>Checkbox</type>
</CustomField>