unpackaged/main/default/objects/Product2/fields/AcctSeed__Tax_Group__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Tax_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Tax_Group__c.AcctSeed__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Tax_Group__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>