unpackaged/main/default/objects/Product2/fields/AcctSeed__Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>