unpackaged/main/default/objects/Product2/fields/AcctSeedERP__Default_Vendor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Default_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>