unpackaged/main/default/objects/Product2/fields/AcctSeedERP__Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Lead_Time__c</fullName>
    <label>Lead Time</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>