unpackaged/main/default/objects/Product2/fields/AcctSeedERP__Serialized__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Serialized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serialized</label>
    <type>Checkbox</type>
</CustomField>