unpackaged/main/default/objects/Product2/fields/AnyWare_Billing_Product_Only__c.field-meta.xml
<CustomField>
    <fullName>AnyWare_Billing_Product_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AnyWare Billing Product Only</description>
    <inlineHelpText>This checkbox should only be set to true if the product is an AnyWare Billing Product Code only, and does not reference an actual product.</inlineHelpText>
    <label>AnyWare Billing Product Only</label>
    <type>Checkbox</type>
</CustomField>