unpackaged/main/default/objects/Product2/fields/CW_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>CW_Agreement_Type__c</fullName>
    <label>CW Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AnyWare Carrier Access Circuits</fullName>
            </value>
            <value>
                <fullName>AnyWare Carrier Access Services</fullName>
            </value>
            <value>
                <fullName>AnyWare E-Fax</fullName>
            </value>
            <value>
                <fullName>AnyWare Network Security</fullName>
            </value>
            <value>
                <fullName>AnyWare Network Infrastructure</fullName>
            </value>
            <value>
                <fullName>AnyWare Data Security</fullName>
            </value>
            <value>
                <fullName>AnyWare Servers</fullName>
            </value>
            <value>
                <fullName>AnyWare Desktops</fullName>
            </value>
            <value>
                <fullName>AnyWare PC Application</fullName>
            </value>
            <value>
                <fullName>AnyWare Voice Basic</fullName>
            </value>
            <value>
                <fullName>AnyWare Voice Custom</fullName>
            </value>
            <value>
                <fullName>AnyWare Labor</fullName>
            </value>
            <value>
                <fullName>Sales Order</fullName>
            </value>
            <value>
                <fullName>Standard Support Agreement</fullName>
            </value>
            <value>
                <fullName>AnyWare VOIP</fullName>
            </value>
            <value>
                <fullName>AnyWare IT</fullName>
            </value>
            <value>
                <fullName>Pre-Paid Block Labor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>