unpackaged/main/default/objects/Product2/fields/CW_Product__c.field-meta.xml
<CustomField>
    <fullName>CW_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CW Product</label>
    <type>Checkbox</type>
</CustomField>