unpackaged/main/default/objects/Product2/fields/Discount_Category__c.field-meta.xml
<CustomField>
    <fullName>Discount_Category__c</fullName>
    <label>Discount Category</label>
    <length>25</length>
    <type>Text</type>
</CustomField>