unpackaged/main/default/objects/Product2/fields/External_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>External_Product_Code__c</fullName>
    <description>External Product Code used to index imported asset and product records.</description>
    <externalId>true</externalId>
    <label>External Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>