unpackaged/main/default/objects/Product2/fields/GA_Billing_Group__c.field-meta.xml
<CustomField>
    <fullName>GA_Billing_Group__c</fullName>
    <label>GA Billing Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carrier Access Services</fullName>
            </value>
            <value>
                <fullName>Infrastructure-as-a-Service</fullName>
            </value>
            <value>
                <fullName>SIP Trunking, Calling Plans, DID and Toll Free Numbers</fullName>
            </value>
            <value>
                <fullName>Data Center Services</fullName>
            </value>
            <value>
                <fullName>IT Services</fullName>
            </value>
            <value>
                <fullName>Customer Premise Equipment</fullName>
            </value>
            <value>
                <fullName>Taxes, Surcharges and Fees</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Support Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>