unpackaged/main/default/objects/Product2/fields/GA_Contract_Make__c.field-meta.xml
<CustomField>
    <fullName>GA_Contract_Make__c</fullName>
    <label>GA Contract Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>