unpackaged/main/default/objects/Product2/fields/GASA__c.field-meta.xml
<CustomField>
    <fullName>GASA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GASA</label>
    <type>Checkbox</type>
</CustomField>