unpackaged/main/default/objects/Product2/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <label>Installation</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>