unpackaged/main/default/objects/Product2/fields/Mitel_Discount__c.field-meta.xml
<CustomField>
    <fullName>Mitel_Discount__c</fullName>
    <label>Mitel Discount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>