unpackaged/main/default/objects/Product2/fields/Mitel_Group__c.field-meta.xml
<CustomField>
    <fullName>Mitel_Group__c</fullName>
    <inlineHelpText>Used for Mitel Product Groups</inlineHelpText>
    <label>Mitel Group</label>
    <length>32</length>
    <type>Text</type>
</CustomField>