unpackaged/main/default/objects/Product2/fields/MS_Lease_MSRP_Value__c.field-meta.xml
<CustomField>
    <fullName>MS_Lease_MSRP_Value__c</fullName>
    <label>MS Lease MSRP Value</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>