unpackaged/main/default/objects/Product2/fields/MS_Lease_Schedule_A_Products__c.field-meta.xml
<CustomField>
    <fullName>MS_Lease_Schedule_A_Products__c</fullName>
    <label>MS Lease Schedule A Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>