unpackaged/main/default/objects/Product2/fields/OPP_Product_Xref__c.field-meta.xml
<CustomField>
    <fullName>OPP_Product_Xref__c</fullName>
    <label>OPP Product Xref</label>
    <length>24</length>
    <type>Text</type>
</CustomField>