unpackaged/main/default/objects/Product2/fields/Passthrough_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Passthrough_Taxes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passthrough Taxes</label>
    <type>Checkbox</type>
</CustomField>