unpackaged/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
                <default>true</default>
                <label>Hardware</label>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Billing Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>