unpackaged/main/default/objects/Product2/fields/Product_Notes__c.field-meta.xml
<CustomField>
    <fullName>Product_Notes__c</fullName>
    <label>Product Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>