unpackaged/main/default/objects/Product2/fields/revio_Automatic_Expiration_Months__c.field-meta.xml
<CustomField>
    <fullName>revio_Automatic_Expiration_Months__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>revio Automatic Expiration Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>