unpackaged/main/default/objects/Product2/fields/revio_Bill_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>revio_Bill_Profile_ID__c</fullName>
    <label>revio Bill Profile ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>