unpackaged/main/default/objects/Product2/fields/revio_Class__c.field-meta.xml
<CustomField>
    <fullName>revio_Class__c</fullName>
    <formula>'Business'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>revio Class</label>
    <type>Text</type>
</CustomField>