unpackaged/main/default/objects/Product2/fields/revio_Commissionable__c.field-meta.xml
<CustomField>
    <fullName>revio_Commissionable__c</fullName>
    <label>revio Commissionable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>