unpackaged/main/default/objects/Product2/fields/revio_Cost__c.field-meta.xml
<CustomField>
    <fullName>revio_Cost__c</fullName>
    <formula>AcctSeed__Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>revio Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>