unpackaged/main/default/objects/Product2/fields/revio_Create_Order__c.field-meta.xml
<CustomField>
    <fullName>revio_Create_Order__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>revio Create Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>