unpackaged/main/default/objects/Product2/fields/revio_Description__c.field-meta.xml
<CustomField>
    <fullName>revio_Description__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>revio Description</label>
    <type>Text</type>
</CustomField>