unpackaged/main/default/objects/Product2/fields/revio_Product_Code2__c.field-meta.xml
<CustomField>
    <fullName>revio_Product_Code2__c</fullName>
    <label>revio Product Code2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>