unpackaged/main/default/objects/Product2/fields/revio_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>revio_Product_ID__c</fullName>
    <label>revio Product ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>