unpackaged/main/default/objects/Product2/fields/revio_Prorate__c.field-meta.xml
<CustomField>
    <fullName>revio_Prorate__c</fullName>
    <label>revio Prorate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>