unpackaged/main/default/objects/Product2/fields/revio_Rate__c.field-meta.xml
<CustomField>
    <fullName>revio_Rate__c</fullName>
    <formula>0.00</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>revio Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>