unpackaged/main/default/objects/Product2/fields/revio_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>revio_Service_Type__c</fullName>
    <label>revio_Service_Type</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>