unpackaged/main/default/objects/Product2/fields/revio_State_List__c.field-meta.xml
<CustomField>
    <fullName>revio_State_List__c</fullName>
    <label>revio State List</label>
    <length>50</length>
    <type>Text</type>
</CustomField>