unpackaged/main/default/objects/Product2/fields/revio_Wholesale_Description__c.field-meta.xml
<CustomField>
    <fullName>revio_Wholesale_Description__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>revio Wholesale Description</label>
    <type>Text</type>
</CustomField>