unpackaged/main/default/objects/Product2/validationRules/AcctSeed__Require_Inventory_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Require_Inventory_Type</fullName>
    <active>true</active>
    <description>Require an inventory Type if the Inventory Product field is true</description>
    <errorConditionFormula>AcctSeed__Inventory_Product__c &amp;&amp;  ISBLANK(TEXT(AcctSeed__Inventory_Type__c))</errorConditionFormula>
    <errorDisplayField>AcctSeed__Inventory_Type__c</errorDisplayField>
    <errorMessage>Product: You must enter an  Inventory Type.</errorMessage>
</ValidationRule>