unpackaged/main/default/objects/Product2/validationRules/AcctSeed__Require_Revenue_GL_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Require_Revenue_GL_Account</fullName>
    <active>true</active>
    <description>Require a Revenue GL Account if the Inventory Product field is true or the Inventory Type field is Purchased</description>
    <errorConditionFormula>(TEXT(AcctSeed__Inventory_Type__c) = "Purchased" || AcctSeed__Inventory_Product__c) &amp;&amp;  ISBLANK(AcctSeed__Revenue_GL_Account__c)</errorConditionFormula>
    <errorDisplayField>AcctSeed__Revenue_GL_Account__c</errorDisplayField>
    <errorMessage>Product: You must enter a Revenue GL Account.</errorMessage>
</ValidationRule>