unpackaged/main/default/objects/Product2/validationRules/AS_Tax__Require_GL_Accounts_for_Tax_Rate_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>AS_Tax__Require_GL_Accounts_for_Tax_Rate_Product</fullName>
    <active>true</active>
    <errorConditionFormula>and( or(isNew(),
        isChanged( AcctSeed__Tax_Rate__c ),
        isChanged( AcctSeed__Expense_GL_Account__c ),
        isChanged( AcctSeed__Revenue_GL_Account__c ),
        isChanged( AcctSeed__Accounting_Type__c )
        ),
    isPickVal(AcctSeed__Accounting_Type__c, "Tax Rate"),
    or(
        isBlank(AcctSeed__Revenue_GL_Account__c),
        isBlank(AcctSeed__Expense_GL_Account__c),
        isNull( AcctSeed__Tax_Rate__c )
       )
   )</errorConditionFormula>
    <errorMessage>If the Tax Type is "Tax Rate", then the fields Tax Rate, Revenue GL Account and Expense GL Account must all be populated.</errorMessage>
</ValidationRule>