unpackaged/main/default/objects/Product2/listViews/AcctSeedERP__Non_Inventory_Products.listView-meta.xml
<ListView>
    <fullName>AcctSeedERP__Non_Inventory_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Inventory_Product__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Non-Inventory Products</label>
</ListView>