unpackaged/main/default/objects/Product2/listViews/All_Products.listView-meta.xml
<ListView>
    <fullName>All_Products</fullName>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>External_Product_Code__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>AcctSeedERP__Inventory_Asset__c</columns>
    <columns>AcctSeed__Inventory_Product__c</columns>
    <columns>AcctSeed__Inventory_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>