unpackaged/main/default/objects/Product2/listViews/All_Products_Billable_only.listView-meta.xml
<ListView>
    <fullName>All_Products_Billable_only</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>greaterThan</operation>
        <value>60000000</value>
    </filters>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>lessThan</operation>
        <value>69999999</value>
    </filters>
    <label>All Products-Billable Only</label>
    <language>en_US</language>
</ListView>