unpackaged/main/default/objects/Product2/listViews/AnyWare_2017.listView-meta.xml
<ListView>
    <fullName>AnyWare_2017</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Category__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>AnyWare 2017</value>
    </filters>
    <label>AnyWare 2017</label>
    <language>en_US</language>
</ListView>