unpackaged/main/default/objects/Product2/listViews/Aspect.listView-meta.xml
<ListView>
    <fullName>Aspect</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>GA_Billing_Group__c</columns>
    <columns>Product_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Aspect</value>
    </filters>
    <label>Aspect</label>
</ListView>