unpackaged/main/default/objects/Product2/listViews/IT_Services.listView-meta.xml
<ListView>
    <fullName>IT_Services</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>IT Services</value>
    </filters>
    <label>IT Services</label>
    <language>en_US</language>
</ListView>