unpackaged/main/default/objects/Product2/listViews/Mitel_5000_Base_Packages.listView-meta.xml
<ListView>
    <fullName>Mitel_5000_Base_Packages</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>GASA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Mitel 5000 Base Packages</value>
    </filters>
    <label>Mitel 5000 Base Packages</label>
</ListView>